# sample-multi-platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
bsp/: CMakeLists.txt  bsp.h  bsp_exception.c  bsp_led.c  bsp_temperature_a.c  bsp_temperature_b.c  bsp_thread_pthread.c  bsp_thread_windows.c
cmake/: config.cmake
device/: CMakeLists.txt  main.c
monitor/: CMakeLists.txt  monitor.c  monitor.h
pal/: CMakeLists.txt  pal.h  pal_exception.c  pal_fan_a.c  pal_fan_b.c  pal_fan_c.c  pal_led.c  pal_temperature_a.c  pal_temperature_b.c  pal_thread_pthread.c  pal_thread_windows.c  pal_version.c
tests/: CMakeLists.txt  pal_compliance_ut.c  temperature_monitor_ut.c
unit_tests/: CMakeLists.txt  temperature_reader_ut.c
